update api search